--- a/src/App.css
+++ b/src/App.css
@@ -23,6 +23,14 @@
   color: #61dafb;
 }
 
+Body {
+  background-image: url("https://wallpapercave.com/wp/wp2445227.jpg");
+  background-position: center;
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-attachment: fixed
+}
+
 @keyframes App-logo-spin {
   from {
     transform: rotate(0deg);
